Fix incognito eye icon overflowing
Before: https://i.ibb.co/vqsByRm/Screenshot-from-2023-06-24-23-37-06.png

After: https://i.ibb.co/Rjx8rz7/Screenshot-from-2023-06-24-23-37-30.png

--- a/theme/parts/headerbar-private-window.css
+++ b/theme/parts/headerbar-private-window.css
@@ -25,7 +25,10 @@
 /* Add private window headerbar indicator */
 :root[privatebrowsingmode="temporary"] #nav-bar toolbarspring:first-of-type:before {
 	background: url("../icons/eye-not-looking-symbolic.svg") no-repeat;
-	background-size: 64px 64px;
+	background-size: contain;
+	padding: 4px;
+  	box-sizing: border-box;
+ 	background-origin: content-box;
 	content: "";
 	display: block;	
 	position: absolute;
